@@ -1,9 +1,10 @@
 package com.example.EPAMtask1.util;
 
-import com.example.EPAMtask1.dao.TraineeDao;
-import com.example.EPAMtask1.dao.TrainerDao;
 import com.example.EPAMtask1.model.Trainee;
 import com.example.EPAMtask1.model.Trainer;
+import com.example.EPAMtask1.model.User;
+import com.example.EPAMtask1.repository.TraineeRepository;
+import com.example.EPAMtask1.repository.TrainerRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -13,79 +14,81 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-public class UserCredentialsGeneratorTest {
+class UserCredentialsGeneratorTest {
 
     @Mock
-    private TraineeDao traineeDao;
+    private TrainerRepository trainerRepository;
     @Mock
-    private TrainerDao trainerDao;
+    private TraineeRepository traineeRepository;
+
     @InjectMocks
     private UserCredentialsGenerator credentialsGenerator;
 
-    @Test
-    void generateUsername_ShouldGenerateUsername() {
-        String firstName = "John";
-        String lastName = "Doe";
+    private Trainee traineeWithName(String firstName, String lastName) {
+        Trainee trainee = new Trainee();
+        User user = new User();
+        user.setFirstName(firstName);
+        user.setLastName(lastName);
+        trainee.setUser(user);
+        return trainee;
+    }
 
-        when(traineeDao.findAll()).thenReturn(Collections.emptyList());
-        when(trainerDao.findAll()).thenReturn(Collections.emptyList());
-        String username = credentialsGenerator.generateUsername(firstName, lastName);
+    private Trainer trainerWithName(String firstName, String lastName) {
+        Trainer trainer = new Trainer();
+        User user = new User();
+        user.setFirstName(firstName);
+        user.setLastName(lastName);
+        trainer.setUser(user);
+        return trainer;
+    }
+
+    @Test
+    void generateUsername_shouldReturnBaseUsername_whenNoCollision() {
+        when(traineeRepository.findAll()).thenReturn(Collections.emptyList());
+        when(trainerRepository.findAll()).thenReturn(Collections.emptyList());
+
+        String username = credentialsGenerator.generateUsername("John", "Doe");
 
         assertEquals("john.doe", username);
     }
-    @Test
-    void generateUsername_ShouldGenerateUniqueUsername_WhenUsernameExists() {
-        String firstName = "John";
-        String lastName = "Doe";
-
-        Trainee existingTrainee = new Trainee();
-        existingTrainee.setUsername("john.doe");
-        List<Trainee> trainees = List.of(existingTrainee);
-
-        when(traineeDao.findAll()).thenReturn(trainees);
-        when(trainerDao.findAll()).thenReturn(Collections.emptyList());
-
-        String username = credentialsGenerator.generateUsername(firstName, lastName);
-
-        assertEquals("john.doe1", username);
-    }
-    @Test
-    void generateUsername_ShouldGenerateThirdUniqueUsername_WhenSecondUsernameExists() {
-        String firstName = "John";
-        String lastName = "Doe";
-
-        Trainee existingTrainee = new Trainee();
-        Trainee existingTrainee1 = new Trainee();
-        existingTrainee.setUsername("john.doe");
-        existingTrainee1.setUsername("john.doe1");
-        List<Trainee> trainees = List.of(existingTrainee, existingTrainee1);
-
-        when(traineeDao.findAll()).thenReturn(trainees);
-        when(trainerDao.findAll()).thenReturn(Collections.emptyList());
-
-        String username = credentialsGenerator.generateUsername(firstName, lastName);
-
-        assertEquals("john.doe2", username);
-    }
 
     @Test
-    void generateUsername_ShouldAddSuffix_WhenCollisionWithTrainerExists() {
-        Trainer existingTrainer = new Trainer();
-        existingTrainer.setUsername("john.doe");
-
-        when(traineeDao.findAll()).thenReturn(Collections.emptyList());
-        when(trainerDao.findAll()).thenReturn(Collections.singletonList(existingTrainer));
+    void generateUsername_shouldAddSuffix_whenCollisionWithTrainee() {
+        when(traineeRepository.findAll()).thenReturn(List.of(traineeWithName("John", "Doe")));
+        when(trainerRepository.findAll()).thenReturn(Collections.emptyList());
 
         String username = credentialsGenerator.generateUsername("John", "Doe");
 
         assertEquals("john.doe1", username);
     }
+
     @Test
-    void generatePassword_ShouldReturnTenCharacterString() {
+    void generateUsername_shouldAddSuffix_whenCollisionWithTrainer() {
+        when(traineeRepository.findAll()).thenReturn(Collections.emptyList());
+        when(trainerRepository.findAll()).thenReturn(List.of(trainerWithName("John", "Doe")));
+
+        String username = credentialsGenerator.generateUsername("John", "Doe");
+
+        assertEquals("john.doe1", username);
+    }
+
+    @Test
+    void generateUsername_shouldSumCollisions_acrossTraineesAndTrainers() {
+        when(traineeRepository.findAll()).thenReturn(List.of(traineeWithName("John", "Doe")));
+        when(trainerRepository.findAll()).thenReturn(List.of(trainerWithName("John", "Doe")));
+
+        String username = credentialsGenerator.generateUsername("John", "Doe");
+
+        assertEquals("john.doe2", username);
+    }
+
+    @Test
+    void generatePassword_shouldReturnTenCharacterString() {
         String password = credentialsGenerator.generatePassword();
 
         assertNotNull(password);
